--- a/3_Translating_Reviews.ipynb
+++ b/3_Translating_Reviews.ipynb
@@ -77,12 +77,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 브랜드 별 파일 이름 리스트 \n",
+    "# 플랫폼 별 파일 이름 리스트 \n",
     "file_names = [\n",
-    "    \"[함께하닭] 헬스 스팀 소스 닭가슴살\",\n",
-    "    \"함께하닭 닭가슴살 소시지 청양고추 100g\",\n",
-    "    \"함께하닭 헬스 스팀 닭가슴살 카레맛 100g\",\n",
-    "    \"함께하닭 헬스앤 돈다리살 100g\"\n",
+    "    \"kakao_reviews\",\n",
+    "    \"naver_reviews\",\n",
+    "    \"google_reviews\",\n"
     "]"
    ]
   },
@@ -138,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "translate review 끝\n",
-      "file_path ./total_preprocessed_review/HamkkeHadak/[함께하닭] 헬스 스팀 소스 닭가슴살_translated.csv\n"
+      "file_path ./total_preprocessed_review/HamkkeHadak/kakao_reviews_translated.csv\n"
      ]
     },
     {
@@ -153,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "translate review 끝\n",
-      "file_path ./total_preprocessed_review/HamkkeHadak/함께하닭 닭가슴살 소시지 청양고추 100g_translated.csv\n"
+      "file_path ./total_preprocessed_review/HamkkeHadak/naver_reviews_translated.csv\n"
      ]
     }
    ],
